--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="kakao_app_key">b82e47f6f8faf22bf28ac2ad14572a40</string>
     <string name="edittext_hint">검색할 컨텐츠를 입력해주세요.</string>
+    <string name="logout_title">로그아웃</string>
 
 </resources>
